# inverse-skills-dev

./: .gitignore  README.md  README_PLANROB_STARTER.md  README_minimal_structure.md  docker-compose.yml  environment.yml  pyproject.toml  report.md
.devcontainer/: devcontainer.json
_extend/scripts/: host_prereqs.sh  smoke_operator_extraction.py
_extend/tests/: test_import.py  test_operator_extraction.py
docker/: Dockerfile
scripts/: attach_dev_container.sh  planrob_executable_demo.py  planrob_inverse_rl_demo.py  planrob_inverse_rl_demo_phase2.py.bak  planrob_inverse_rl_phase4_her_demo.py  planrob_inverse_rl_pushcube_demo.py  planrob_inverse_rl_pushcube_full_demo.py  planrob_inverse_rl_pushcube_full_demo_2d_action.py  planrob_inverse_rl_pushcube_push_correction_demo.py  planrob_inverse_rl_pushcube_push_correction_demo_bak.py  planrob_inverse_rl_release_eval.py  planrob_maniskill_demo.py  planrob_parameterized_demo.py  planrob_parameterized_distractor_demo.py  planrob_submission_bundle.py  planrob_toy_demo.py  planrob_visual_report.py  plot_reward_diagnostics.py  plot_reward_shape.py  run_dev_container.sh  run_planrob_bundle.sh  smoke_operator_extraction.py  visualize_pushcube_forward_symbolic.py  visualize_pushcube_full_rollout.py
src/inverse_skills/: __init__.py  planrob_bundle.py  smoke_test.py
src/inverse_skills_dev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_executable_toy_rollouts.py  test_operator_extraction.py  test_parameterized_operator.py  test_planrob_submission_bundle.py  test_toy_inverse_planner.py  test_two_phase_inverse.py
(+24 files in other folders)
